# ompc

./: .dockerignore  .env.example  .gitignore  CODE_AUDIT_REPORT.md  Dockerfile  LOOP_LOG.md  LOOP_LOG_1-100.md  LOOP_LOG_101-200.md  README.md  START_OMPC.bat  copy_fixed.ps1  create_junction.ps1  deploy_fixes.py  docker-compose.yml  entrypoint.sh  frontend-audit-report.md  secret_scan_report.md  start_ompc.py  test_overwrite.ps1  tidal-bloom-philosophy.md  write_fixed.ps1  敏感信息扫描报告.md
.github/workflows/: docker.yml
fixed_files/app/services/: content_service.py  content_source_context.py  image_service.py  model_router.py  trend_browser_collector.py
frontend/: package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: layout.tsx
frontend/components/: mobile-create-screen.tsx  mobile-create-utils.ts  unified-nav.tsx
frontend/lib/: api-base.ts
infra/cloudflare/: opc-tunnel.example.yml
test_backend/: pyproject.toml
test_backend/app/: main.py
test_backend/app/api/: deps.py
test_backend/app/api/v1/endpoints/: auth.py  content.py  workspace.py
test_backend/app/core/: config.py  security.py
test_backend/app/db/: session.py
test_backend/app/schemas/: auth.py
test_backend/app/services/: auth_service.py  content_prompt_builder.py  content_service.py  content_source_context.py  humanizer.py  image_service.py  knowledge_service.py  model_router_helpers.py  model_router_images.py  review_service.py  trend_browser_collector.py  trend_browser_parsers.py  trend_service.py  variant_service.py  web_search_service.py  workspace_service.py
(+17 files in other folders)
